@@ -1,3 +1,7 @@
+2008-02-12  David A. Capello  <dacap@users.sourceforge.net>
+
+	* src/widgets/fileview.c (fileview_msg_proc): Fixed flickering.
+
 2008-02-11  David A. Capello  <dacap@users.sourceforge.net>
 
 	* src/file/gif/lzw.c (LZW_decode): Fixed a bug when loading some
